Fix flickering animation in safari

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -536,6 +536,7 @@ a {
         }
  
         &:before {
+          -webkit-transform: translate3d(0, 0, 0);
           content: '\25BC';
           position: absolute;
           top: -15px;
